fix whitespace

--- a/gatsby/static/css/webflow-overrides.css
+++ b/gatsby/static/css/webflow-overrides.css
@@ -74,7 +74,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .mxblock.mxblock--foundation {
   text-align: left;
-  padding-bottom: 0px;
 }
 
 .mxgrid__item--guardian__bg__img {
